--- a/main.tex
+++ b/main.tex
@@ -67,7 +67,7 @@
 % Abstract
 \begin{abstract}
 
-Adversarial attacks pose a significant challenge to the robustness of deep-learning models used in high-energy physics analyses. This thesis investigates the vulnerability of jet-flavour tagging algorithms within the Compact Muon Solenoid experiment to perturbations on both continuous and discrete input features. In addition to standard gradient-based methods such as Projected Gradient Descent (PGD), IntProb is introduced, a probabilistic integer attack designed for discrete-valued physics inputs. The attack leverages instantaneous gradient information to assign feature-specific flip probabilities, enabling efficient perturbations without continuous relaxations. A combined PGD+IntProb attack is further studied to target both feature domains simultaneously. Evaluation on DeepJet demonstrates that IntProb can induce competitive degradation relative to PGD, with complementary effects when applied jointly. Adversarial training experiments show improved robustness to the targeted attack types, though with limited generalisation across unseen perturbations. These results highlight the importance of accounting for discrete-feature vulnerabilities in the development of resilient HEP machine-learning models.
+Adversarial attacks pose a significant challenge to the robustness of deep-learning models used in high-energy physics analyses. This thesis investigates the vulnerability of jet-flavour tagging algorithms within the Compact Muon Solenoid experiment to perturbations on both continuous and discrete input features. In addition to standard gradient-based methods such as Projected Gradient Descent (PGD), PIP is introduced – a probabilistic integer attack designed for discrete-valued physics inputs. The attack leverages instantaneous gradient information to assign feature-specific flip probabilities, enabling efficient perturbations without continuous relaxations. A combined PIP-PGD attack is further studied to target both feature domains simultaneously. Evaluation on DeepJet demonstrates that PIP can induce competitive degradation relative to PGD, with complementary effects when applied in conjunction. Adversarial training experiments show improved robustness to the targeted attack types, though with limited generalisation across unseen perturbations. These results highlight the importance of accounting for discrete-feature vulnerabilities in the development of resilient high energy physics machine learning models.
 
 \vfill
 \noindent\fbox{\parbox{0.95\textwidth}{
