--- a/thesis/standard_model.tex
+++ b/thesis/standard_model.tex
@@ -16,7 +16,7 @@ The matter particles in the SM are divided into quarks and leptons. Quarks are t
     \label{fig:standard_model}
 \end{figure}
 
-A key aspect of the SM is how it accounts for the masses of certain particles. While the symmetry of the SM keeps the photon massless, the W and Z bosons, which are involved in the weak force, need to have mass to match experimental observations. This happens through a process where the symmetry is hidden in the everyday world but still governs the underlying physics. The Higgs field, a field that fills all of space and was proposed in the 1960s by physicists like Englert, Brout, and Higgs, makes this possible. The Higgs field gives mass to the W and Z bosons and, in the process, predicts the existence of a new particle: the Higgs boson \cite{pich2012standardmodelelectroweakinteractions}.
+A key aspect of the SM is how it accounts for the masses of certain particles. While the symmetry of the SM keeps the photon massless, the W and Z bosons, which are involved in the weak force, need to have mass to match experimental observations. This happens through a process where the symmetry is hidden in the everyday world but still governs the underlying physics, known as spontaneous symmetry breaking \cite{pich2012standardmodelelectroweakinteractions}. The Higgs field, a field that fills all of space and was proposed in the 1960s by physicists like Englert, Brout, and Higgs, makes this possible. The Higgs field gives mass to the W and Z bosons and, in the process, predicts the existence of a new particle: the Higgs boson \cite{pich2012standardmodelelectroweakinteractions}.
 
 For decades, the Higgs boson remained the missing piece of the SM. In 2012, experiments at CERN’s Large Hadron Collider (LHC), conducted by the ATLAS and CMS teams, discovered a new particle with a mass of about 125 GeV \cite{Chatrchyan_2012}. This particle’s properties have been studied extensively and align with the Higgs boson predicted by the SM, confirming the mechanism that gives mass to other particles. Today, the Higgs boson’s mass is measured to be approximately 125 GeV, with only a small uncertainty \cite{Chatrchyan_2012}.
 
@@ -38,7 +38,9 @@ Figure \ref{fig:lhc} shows the structure of the CERN complex with the LHC at its
 
 \section{The CMS Experiment}
 
-CMS is one of the two general-purpose detectors at the LHC. It is designed to record the myriad particles produced in LHC collisions with high efficiency and precision, enabling a broad physics program from Higgs boson studies to searches for new phenomena. The CMS detector is built in a layered, cylindrical geometry around the collision point (see figure \ref{fig:cms_overview}) and, despite the name "Compact", enormous in absolute terms: it is about 15~m in diameter, 21~m in length, and weighs about 14,000 tonnes. At the heart of CMS is a superconducting solenoid coil that generates a magnetic field of 3.8 T within a 6~m inner diameter. This bends the trajectories of charged particles, allowing their momenta to be measured; the steel structure that contains the magnetic flux (the return yoke) also serves as the absorber for muon detection and accounts for the bulk of CMS’s mass. Inside the magnet coil, CMS is packed with high-precision tracking and calorimetry systems, and outside the coil are large muon detector chambers, as shown in figure \ref{fig:cms_overview} \cite{CMS}.
+Collision events in the LHC produce quarks and gluons that cannot exist as free particles (colour confinement \cite{pich2012standardmodelelectroweakinteractions}). Instead, the outgoing parton radiates additional quarks and gluons, forming a parton shower whose virtuality cascades down to $\mathcal{O}(\mathrm{GeV})$, where hadronisation binds them into colour-neutral hadrons. Because soft and collinear emissions are enhanced in QCD, these hadrons emerge in a narrow cone around the original parton direction, forming a visible spray—a jet. The CMS detector is one of the two general-purpose detectors at the LHC designed to record these jets with high efficiency and precision, enabling a broad physics program from Higgs boson studies to searches for new phenomena. 
+
+The CMS detector is built in a layered, cylindrical geometry around the collision point (see figure \ref{fig:cms_overview}) and, despite the name "Compact", enormous in absolute terms: it is about 15~m in diameter, 21~m in length, and weighs about 14,000 tonnes. At the heart of CMS is a superconducting solenoid coil that generates a magnetic field of 3.8 T within a 6~m inner diameter. This bends the trajectories of charged particles, allowing their momenta to be measured; the steel structure that contains the magnetic flux (the return yoke) also serves as the absorber for muon detection and accounts for the bulk of CMS’s mass. Inside the magnet coil, CMS is packed with high-precision tracking and calorimetry systems, and outside the coil are large muon detector chambers, as shown in figure \ref{fig:cms_overview} \cite{CMS}.
 
 \begin{figure}[h]
 \centering
@@ -51,7 +53,7 @@ Moving outwards from the beam line, the first subsystem is the silicon tracker, 
 
 Surrounding the tracker is the electromagnetic calorimeter (ECAL), which is made of dense lead tungstate ($\text{PbWO}_4$) crystals. The ECAL’s task is to fully absorb and measure the energy of electrons and photons \cite{CMS}. When an electron or high-energy photon enters the ECAL, it initiates an electromagnetic shower in the crystal. The light output from the crystals is proportional to the particle’s energy. The CMS ECAL provides excellent energy resolution (on the order of 1\% for high-energy electrons/photons) and was pivotal in the Higgs boson discovery via the $H\to\gamma\gamma$ decay mode \cite{Chatrchyan_2012}.
 
-Outside the ECAL lies the hadron calorimeter (HCAL). It is sampling calorimeter using alternating layers of absorber (brass or steel) and plastic scintillator. The HCAL is designed to stop and measure the energy of hadrons (particles made of quarks, such as pions, kaons, protons, etc.) \cite{CMS}. Hadrons penetrate the ECAL but are largely absorbed in the thicker material of the HCAL, producing cascades of secondary particles. By collecting the scintillation light from these showers, the HCAL provides a measurement of the hadronic energy. Although the HCAL’s resolution is coarser than that of the ECAL, combining its information with the ECAL and tracker allows reconstruction of the energy and direction of jets (collimated sprays of particles from quark or gluon fragmentation) as well as the estimation of missing transverse energy.
+Outside the ECAL lies the hadron calorimeter (HCAL). It is sampling calorimeter using alternating layers of absorber (brass or steel) and plastic scintillator. The HCAL is designed to stop and measure the energy of hadrons (particles made of quarks, such as pions, kaons, protons, etc.) \cite{CMS}. Hadrons penetrate the ECAL but are largely absorbed in the thicker material of the HCAL, producing cascades of secondary particles. By collecting the scintillation light from these showers, the HCAL provides a measurement of the hadronic energy. Although the HCAL’s resolution is coarser than that of the ECAL, combining its information with the ECAL and tracker allows reconstruction of the energy and direction of jets as well as the estimation of missing transverse energy.
 
 The outermost layers of CMS are the dedicated muon detectors, which give the experiment its name. Muons are charged leptons similar to electrons but about 200 times heavier, and they are penetrating: unlike most particles, muons can traverse substantial amounts of matter. In CMS, after passing through the calorimeters, muons still have enough energy to reach the muon chambers interleaved in the steel return yoke \cite{CMS}. CMS employs several types of muon detectors (drift tubes, cathode strip chambers, and resistive plate chambers) to track muons independently of the inner tracker. By matching muon tracks in the muon system with those in the inner tracker, CMS achieves a very accurate muon momentum measurement.
 
